--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-/* CSS files add styling rules to your content */
+/***Main Styles****/
 <style>
 
-/***Main Styles****/
 
 
 body {
@@ -20,6 +19,7 @@ body {
   background-color: lightblue;
 }
 
+
 h2{font-family: 'Antic Slab', serif;}
 
 p{font-family: 'Antic Slab', serif;}
@@ -30,6 +30,10 @@ img {
   width: 100%;
   max-width: 600px;
 }
+
+h1{text-align:center;}
+h2{text-align:center;}
+p{text-align:center;}
 
 
 
