--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   margin: 2em;
 }
 
-/***Font***/
+/***Fonts***/
 
 h1 {
   font-style: bold;
@@ -53,7 +53,7 @@ p {
   text-align: center;
 }
 
-/***Slideshow Styles**/
+/***Slideshow Styles***/
 
 <style > .mySlides {
   display: none;
